# kanalabo

./: Cargo.toml
crates/arithmetics/fp/: Cargo.toml
crates/arithmetics/fp/src/: lib.rs
crates/doubling/doubling/: Cargo.toml
crates/doubling/src/: lib.rs
crates/fast_factorization/: Cargo.toml
crates/fenwick/fenwick_2d_u32/: Cargo.toml
crates/fenwick/fenwick_2d_u32/src/: lib.rs
crates/fenwick/fenwick_u32/: Cargo.toml
crates/fenwick/fenwick_u32/src/: lib.rs
crates/fenwick_2d_u32/: Cargo.toml
crates/gcd/: Cargo.toml
crates/gcd/src/: lib.rs
crates/partitions/: Cargo.toml
crates/partitions/src/: lib.rs
crates/query_test/: Cargo.toml
crates/query_test/src/: lib.rs
crates/query_test_derive/: Cargo.toml
crates/query_test_derive/src/: lib.rs
crates/segtree/: Cargo.toml
crates/segtree/segtree/src/: lib.rs
crates/segtree/segtree_value/: Cargo.toml
crates/segtree/segtree_value/src/: lib.rs
crates/segtree/src/: lib.rs  queries.rs  vector.rs
crates/segtree/two_dimensional_segtree/: Cargo.toml
crates/segtree/two_dimensional_segtree/src/: lib.rs
crates/sieve/fast_factorization/src/: lib.rs
crates/type_utils/constant/src/: lib.rs
crates/wavelet_matrix/wavelet_matrix/: Cargo.toml
crates/wavelet_matrix/wavelet_matrix/src/: lib.rs  test_instance.rs
