[package]
name = "partitions"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
type_traits = { git = "https://github.com/ngtkana/ac-adapter-rs.git", package = "type_traits" }
fp = { git = "https://github.com/ngtkana/ac-adapter-rs.git", package = "fp" }
