[package]
name = "query_test"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
yansi = "0.5.0"

[[example]]
name = "segtree"
path = "examples/segtree/lib.rs"
crate-type = ["staticlib"]
