[package]
name = "two_dimensional_segtree"
version = "0.1.0"
authors = ["ngtkana <ngtkana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
segtree_value = { path = "../segtree_value" }

[dev-dependencies]
itertools = "0.9.0"
